k8s/game-history.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-history
  namespace: tictactoe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-history
  template:
    metadata:
      labels:
        app: game-history
    spec:
      containers:
        - name: game-history
          image: karchevskii/distr_sys-game_history_service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /history-service/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /history-service/health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            limits:
              cpu: "512m"
              memory: "400Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: game-history
  namespace: tictactoe
spec:
  selector:
    app: game-history
  ports:
    - port: 8000
      targetPort: 8000
