k8s/game.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game
  namespace: tictactoe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game
  template:
    metadata:
      labels:
        app: game
    spec:
      containers:
        - name: game
          image: karchevskii/distr_sys-game_service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /game-service/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /game-service/health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            limits:
              cpu: "1000m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: game
  namespace: tictactoe
spec:
  selector:
    app: game
  ports:
    - port: 8000
      targetPort: 8000
