k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: tictactoe
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    name: redis
  - port: 26379
    name: sentinel
  clusterIP: None
  selector:
    app: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-read
  namespace: tictactoe
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    name: redis
  selector:
    app: redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: tictactoe
spec:
  serviceName: redis
  replicas: 2
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        command: ["redis-server"]
        args: ["/config/redis.conf"]
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: data
          mountPath: /data
        - name: config
          mountPath: /config
        - name: redis-password
          mountPath: /etc/redis-password
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - redis-cli -a $(cat /etc/redis-password/redis-password) ping
          initialDelaySeconds: 15
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - redis-cli -a $(cat /etc/redis-password/redis-password) ping
          initialDelaySeconds: 5
          timeoutSeconds: 1
      - name: sentinel
        image: redis:7-alpine
        command: ["redis-sentinel"]
        args: ["/config/sentinel.conf"]
        ports:
        - containerPort: 26379
          name: sentinel
        volumeMounts:
        - name: config
          mountPath: /config
        - name: redis-password
          mountPath: /etc/redis-password
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - redis-cli -p 26379 ping
          initialDelaySeconds: 15
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - redis-cli -p 26379 ping
          initialDelaySeconds: 5
          timeoutSeconds: 1
      volumes:
      - name: config
        emptyDir: {}
      - name: config-map
        configMap:
          name: redis-config
      - name: redis-password
        secret:
          secretName: redis-creds
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
