k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tictactoe-ingress
  namespace: tictactoe
  # annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: tictactoe.local
    http:
      paths:
      - path: /users-service
        pathType: Prefix
        backend:
          service:
            name: users
            port:
              number: 8000
      - path: /game-service
        pathType: Prefix
        backend:
          service:
            name: game
            port:
              number: 8000
      - path: /history-service
        pathType: Prefix
        backend:
          service:
            name: game-history
            port:
              number: 8000
